--- a/style.css
+++ b/style.css
@@ -5,16 +5,23 @@
     width: 700px;
     height: 700px;
     margin: 0 auto;
-
+    background-color: white;
 }
 .gridbox {
     border-style: solid;
     border-width: 1px;
+    
 }
 
 h1{
     margin: 0 auto;
     text-align: center;
+    color: black;
+    font-size: 50px;
+    background-color: rgba(128, 128, 128, 0.9);
+    width: 25%;
+    border-radius: 25px;
+    box-shadow: 1px 1px 1px 1px;
 
  }
 
@@ -28,5 +35,10 @@ h1{
  #colorDemo {
      background-color: red;
      padding: 20px;
+     border-style: solid;
+     border-width: 1px;
  }
  
+ body {
+     background-image: url(images/maze.png);
+ }
